# splashboard

./: -  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRDPARTY-LICENSES.md  about.hbs  about.toml  codecov.yml  flake.nix  generate_changelog.sh  install.sh
.claude/skills/add-fetcher-renderer/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.gnhf/: README.md  run.sh
.gnhf/prompts/: coverage-loop.md  perf-loop.md
.splashboard/: config.toml  dashboard.toml
Formula/: splashboard.rb
docs-site/: .gitignore  astro.config.mjs  package-lock.json  package.json
docs-site/public/: CNAME
docs-site/scripts/: build-og.mjs  copy-markdown.mjs
docs-site/src/content/docs/: 404.md  index.md  index.mdx  showcases.md  showcases.mdx
docs-site/src/content/docs/guides/: concepts.md  configuration.md  cookbook.md  getting-started.md  presets.md  presets.mdx  read-store.md  themes.md  trust.md
docs-site/src/styles/: snapshot.css  theme.css
examples/: preview_template.rs
src/: cache.rs  catalog.rs  config.rs  daemon.rs  default_config.toml  default_home_dashboard.toml  default_project_dashboard.toml  default_settings.toml  layout.rs  lib.rs  logging.rs  main.rs  options.rs  paths.rs  payload.rs  runtime.rs  samples.rs  secrets.rs  shell.rs  stubs.rs  time.rs  trust.rs
src/fetcher/: clock.rs  code.rs  hackernews_top.rs  hn_top.rs  mod.rs  project.rs  quote_of_day.rs  random_cat.rs  random_dog.rs  read_store.rs  reddit.rs  rss.rs  static_text.rs  stub.rs  system.rs  todoist.rs  weather.rs
src/fetcher/calendar/: holidays.rs  mod.rs
src/fetcher/clock/: almanac.rs  common.rs  countdown.rs  derived.rs  mod.rs  ratio.rs  state.rs  sunrise.rs  timezones.rs
src/fetcher/code/: comments.rs  files.rs  language_logo.rs  languages.rs  largest_files.rs  loc.rs  logo_assets.rs  mod.rs  scan.rs  todos.rs
src/fetcher/deariary/: client.rs  mod.rs  on_this_day.rs  recent.rs  today.rs
src/fetcher/fortune/: data.txt  mod.rs
src/fetcher/git/: age.rs  blame_heatmap.rs  churn.rs  commits_activity.rs  contributors.rs  latest_tag.rs  mod.rs  recent_commits.rs  repo_name.rs  stash_count.rs  status.rs  test_support.rs  worktrees.rs
src/fetcher/github/: action_history.rs  action_status.rs  assigned_issues.rs  avatar.rs  client.rs  common.rs  contributions.rs  contributors_monthly.rs  good_first_issues.rs  items.rs  languages.rs  mod.rs  my_prs.rs  notifications.rs  recent_releases.rs  repo.rs  repo_issues.rs  repo_prs.rs  repo_stars.rs  review_requests.rs  user.rs
src/fetcher/hackernews/: client.rs  mod.rs  top.rs  user.rs  user_comments.rs  user_submissions.rs
src/fetcher/linear/: client.rs  cycle.rs  issues.rs  mod.rs  notifications.rs
src/fetcher/quote_of_day/: data.txt  mod.rs
src/fetcher/random_fortune/: mod.rs
src/fetcher/random_quote/: mod.rs
src/fetcher/reddit/: client.rs  common.rs  mod.rs  subreddit_posts.rs  user_comments.rs  user_posts.rs
src/fetcher/wikipedia/: client.rs  featured.rs  mod.rs  on_this_day.rs  random.rs
src/install/: mod.rs  picker.rs  preview.rs  rc.rs
src/render/: animated_boot.rs  animated_figlet_morph.rs  animated_postfx.rs  animated_scanlines.rs  animated_splitflap.rs  animated_typewriter.rs  animated_wave.rs  ascii_art.rs  badge.rs  bar_chart.rs  bignum.rs  calendar.rs  chart_bar.rs  chart_histogram.rs  chart_line.rs  chart_pie.rs  chart_scatter.rs  chart_sparkline.rs  figlet.rs  gauge.rs  gauge_battery.rs  gauge_circle.rs  gauge_line.rs  gauge_segment.rs  gauge_thermometer.rs  grid_calendar.rs  grid_heatmap.rs  grid_table.rs  heatmap.rs  image.rs  line_chart.rs  line_gauge.rs  list.rs  list_links.rs  list_plain.rs  list_ranking.rs  list_timeline.rs  loading.rs  media_image.rs  mod.rs  (+11 more)
src/render/figlet_fonts/: README.md
src/shells/: bash.sh  fish.fish  powershell.ps1  zsh.sh
src/templates/: home_daily.toml  home_feed.toml  home_github.toml  home_minimal.toml  home_splash.toml  mod.rs  project_codebase.toml  project_github.toml  project_github_activity.toml  project_minimal.toml  project_splash.toml
src/theme/: mod.rs  presets.rs
tests/: install_picker_tty.rs  main_cli.rs
xtask/: Cargo.toml
xtask/src/: dashboard_snapshot.rs  gen_matrix.rs  html_snapshot.rs  main.rs  snapshots.rs
xtask/tests/: main_cli.rs
(+5 files in other folders)
