[package]
name = "splashboard"
version = "0.1.0"
edition = "2024"
authors = ["Yuji Ueki <unhappychoice@gmail.com>"]
description = "A customizable terminal splash screen with plugin-based data sources"
license = "ISC"
repository = "https://github.com/unhappychoice/splashboard"
homepage = "https://github.com/unhappychoice/splashboard"
readme = "README.md"
keywords = ["tui", "splash", "dashboard", "terminal", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = { version = "0.29", features = ["widget-calendar"] }
time = "0.3"
figlet-rs = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive"] }
tui-big-text = "0.7"
ratatui-image = "4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
async-trait = "0.1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
