[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
description = "Workspace tooling for splashboard: docs matrix and snapshot generation"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
splashboard = { path = ".." }
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.30", features = ["widget-calendar"] }
toml = "1.1"
anyhow = "1"
